--- a/NIINM/asinem.html
+++ b/NIINM/asinem.html
@@ -121,7 +121,7 @@
 				            <li class="current-page"><a href="asinem.html">Ассоциация</a></li>
 				            <li><a href="nir.html">Последние Разработки</a></li>
 				            <li><a href="services.html">Услуги</a></li>
-				            <li><a href="#">Контакты</a></li>
+				            <li><a href="contacts.html">Контакты</a></li>
 				            <li><a href="lab.html">Лаборатория</a></li>
 				        </ul>
 				    </nav>
@@ -272,7 +272,7 @@
 									<li><a href="about.html">ОБ ИНСТИТУТЕ</a></li>
 									<li><a href="asinem.html">АССОЦИАЦИЯ</a></li>
 									<li><a href="nir.html">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
-									<li><a href="#">КОНТАКТЫ</a></li>
+									<li><a href="contacts.html">КОНТАКТЫ</a></li>
 								</ul>
 							</div>
 							<div class="footer-column">
