--- a/NIINM/contacts.html
+++ b/NIINM/contacts.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>Об институте | ООО “НИИИНМ”</title>
+	<title>Контакты | ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -105,7 +105,7 @@
 					<nav id="my-menu">
 				        <ul>
 				        	<li><a href="index.html">Главная</a></li>
-				            <li class="current-page"><a href="#">Об институте</a></li>
+				            <li><a href="about.html">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
 				            	<ul>
@@ -121,7 +121,7 @@
 				            <li><a href="asinem.html">Ассоциация</a></li>
 				            <li><a href="nir.html">Последние Разработки</a></li>
 				            <li><a href="services.html">Услуги</a></li>
-				            <li><a href="contacts.html">Контакты</a></li>
+				            <li class="current-page"><a href="contacts.html">Контакты</a></li>
 				            <li><a href="lab.html">Лаборатория</a></li>
 				        </ul>
 				    </nav>
@@ -148,104 +148,59 @@
 			</div>
 		</header>
 		<!--! Page-title -->
-		<section class="page-title"><h1>Об институте</h1></section>
+		<section class="page-title"><h1>КОНТАКТЫ</h1></section>
 		<!-- Container -->
 		<div class="container">
+		<!--! Columns -->
+			<section class="row columns-section justify-content-between">
+				<p>По всем вопросам работы института можно обращаться непосредственно к генеральному директору Шавкину Владимиру Ивановичу, по телефону 8 (916) 684-24-87 и по адресу электронной почты: nri@inbox.ru
+					<br><br>
+				</p>
+				<div class="col-lg-5 col-md-6 col-12">
+					<h4>КАНЦЕЛЯРИЯ:</h4>
+					<p>8 (4967) 35-27-81</p>
+					<p> 8 (4967) 76-52-40</p>
+					<br>
+					<h4>БУХГАЛТЕРИЯ:</h4>
+					<p>8 (4967) 35-27-15</p>
+					<p>Васильева Елена Юрьевна</p>
+					<br>
+					<h4>ЛАБОРАТОРИЯ ФИЛЬТРОВАЛЬНЫХ НЕТКАНЫХ МАТЕРИАЛОВ:</h4>
+					<p>+7 (4967) 72-29-29</p>
+					<p>8 (985) 300-21-37</p>
+					<p>8 (916) 362-80-26 - заведующий лабораторией Егупова Светлана Анатольевна</p>
+				</div>
+				<div class="col-lg-5 col-md-6 col-12">
+					<h4>ЛАБОРАТОРИЯ ПОЛИФУНКЦИОНАЛЬНЫХ НЕТКАНЫХ МАТЕРИАЛОВ С ПОЛИФУНКЦИОНАЛЬНЫМИ СВОЙСТВАМИ:</h4>
+					<p>+7 (4967) 35-27-53</p>
+					<p>+7 (916) 850-50-04 - ведущий научный сотрудник Братченя Людмила Алексеевна</p>
+					<br>
+					<h4>ЛАБОРАТОРИЯ СТАНДАРТИЗАЦИИ, ИСПЫТАНИЙ И СЕРТИФИКАЦИИ НЕТКАНЫХ МАТЕРИАЛОВ:</h4>
+					<p>+7 (4967) 35-76-75 - заведующий лабораторией Мухамеджанов Габит Кульжабаевич</p>
+					<br>
+					<h4>НАУЧНО-ЭКСПЕРЕМЕНТАЛЬНАЯ ЛАБОРАТОРИЯ:</h4>
+					<p>8 (4967) 72-88-87</p>
+					<br>
+					<h4>СПЕЦИАЛИСТ ПО РАБОТЕ С КЛИЕНТАМИ:</h4>
+					<p>8 (985)-300-21-37</p>
+				</div>
+			</section>
+			<br><br>
 			<!--! Card-block -->
 			<div class="card-block right">
-				<img class="card-block__img" src="img/card3.png" alt="Научно-исследовательский институт нетканых материалов">
+				<div style="position:relative;overflow:hidden; width: 100%;"><a href="https://yandex.ru/maps/10754/serpuhov/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Серпухов</a><a href="https://yandex.ru/maps/10754/serpuhov/house/proletarskaya_ulitsa_82/Z04YdQ5hS0AGQFtufXVwdn9kYg==/?ll=37.391617%2C54.917234&utm_medium=mapframe&utm_source=maps&z=18.69" style="color:#eee;font-size:12px;position:absolute;top:14px;">Пролетарская улица, 82 — Яндекс.Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCQp6VVDgD" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 				<div class="card-block__content">
-					<strong>В состав ООО "НИИНМ" входит пять основных структурных подразделений, в том числе:</strong>
-					<ul>
-						<li>Лаборатория фильтровальных нетканых материалов;</li>
-						<li>Лаборатория нетканых материалов санитарно-гигиенического назначения;</li>
-						<li>Лаборатория стандартизации, испытаний и сертификации нетканых материалов;</li>
-						<li>Лаборатория полифункциональных нетканых материалов;</li>
-						<li>Научно-экспериментальная лаборатория;</li>
-					</ul>
+					<h3>Юридический адрес:</h3>
+					<p>ООО «Научно-исследовательский институт нетканых материалов»,142214, Московская обл., г. Серпухов, ул. Ворошилова, д. 137,офис № 18,этаж № 4.</p>
+					<br>
+					<h3>Фактический адрес:</h3>
+					<p>В 2007 году все производственные мощности и лаборатории института были переведены и находятся в настоящее время по адресу: Московская обл., г. Серпухов, ул. Пролетарская, д. 82.</p>
+					<p>Отгрузка готовой продукции происходит именно по этому адресу.</p>
 				</div>
 			</div>
 			<br>
 			<br>
-			<br>
-			<!-- Quote block -->
-			<hr>
-			<div class="quote-block">
-				<h2>Сотрудники</h2>
-			</div>
-			<hr>
-			<!-- ./Quote block -->
-			<br>
-			<br>
-			<br>
-			<!--! Card-block -->
-			<div class="card-block">
-				<img class="card-block__img" src="img/employer1.png" alt="Научно-исследовательский институт нетканых материалов">
-				<div class="card-block__content">
-					<h4 class="card-block__title">ШАВКИН ВЛАДИМИР ИВАНОВИЧ</h4>
-					<p>Генеральный директор</p>
-					<p>кандидат экономических наук, старший научный сотрудник, доцент, автор нескольких десятков научных публикаций</p>
-					<p>по всем вопросам работы института можно обращаться непосредственно к генеральному директору по адресу электронной почты:</p>
-				</div>
-			</div>
-			<br>
-			<br>
-			<hr>
-			<!--! Employers -->
-			<div class="employers">
-				<div class="employer">
-					<img src="img/employer2.png" alt="ЕГУПОВА СВЕТЛАНА АНАТОЛЬЕВНА">
-					<h3 class="employer__name">ЕГУПОВА СВЕТЛАНА АНАТОЛЬЕВНА</h3>
-					<p>Заведующий лабораторией фильтровальных нетканых материалов кандидат технических наук, старший научный сотрудник, автор нескольких изобретений и научных публикаций.</p>
-
-					<div class="employer-contact">
-						<span>8 (985) 300-21-37</span>
-						<span>8 (916) 362-80-28-026</span>
-						<span>8 (4967) 72-29-29</span>
-					</div>
-				</div>
-				<div class="employer">
-					<img src="img/employer3.png" alt="МУХАМЕДЖАНОВ ГАБИТ КУЛЬЖАБАЕВИЧ">
-					<h3 class="employer__name">МУХАМЕДЖАНОВ ГАБИТ КУЛЬЖАБАЕВИЧ</h3>
-					<p>Заведующий лабораторией стандартизации, испытаний и сертификации нетканых материалов (испытательной лабораторией) кандидат технических наук, старший научный сотрудник, эксперт, автор нескольких сотен научных публикаций.</p>
-
-					<div class="employer-contact">
-						<span>8 (4967) 35-76-75;</span>
-						<span>8(916) 218-94-04</span>
-					</div>
-				</div>
-				<div class="employer">
-					<img src="img/employer4.png" alt="ФОКИНА НИНА АЛЕКСАНДРОВНА">
-					<h3 class="employer__name">ФОКИНА НИНА АЛЕКСАНДРОВНА</h3>
-					<p>Заведующий лабораторией нетканых материалов санитарно-гигиенического назначения кандидат технических наук, старший научный сотрудник, автор нескольких изобретений и десятков научных публикаций.</p>
-
-					<div class="employer-contact">
-						<span>8 (985) 300-21-37</span>
-						<span>8 (905) 785-79-30;</span>
-						<span>8 (4967) 72-88-8731</span>
-					</div>
-				</div>
-				<div class="employer">
-					<img src="img/employer5.png" alt="БРАТЧЕНЯ ЛЮДМИЛА АЛЕКСЕЕВНА">
-					<h3 class="employer__name">БРАТЧЕНЯ ЛЮДМИЛА АЛЕКСЕЕВНА</h3>
-					<p>Заведующий лабораторией полифункциональных нетканых материалов кандидат технических наук, ведущий научный сотрудник, автор нескольких изобретений и десятков научных публикаций разработчик линии обувных материалов "СТЕЛАН" и "ФИТОЛИН".</p>
-
-					<div class="employer-contact">
-						<span>8(985) 300-21-37</span>
-						<span>8 (916) 850-50-044</span>
-						<span>+7 (4967) 35-27-53</span>
-					</div>
-				</div>
-				<div class="employer">
-					<img src="img/employer6.png" alt="БЫКОНЯ СТАНИСЛАВ СЕРГЕЕВИЧ">
-					<h3 class="employer__name">БЫКОНЯ СТАНИСЛАВ СЕРГЕЕВИЧ</h3>
-					<p>заведующий научно-экспериментальной лабораторией.</p>
-
-					<div class="employer-contact">
-						<span>8 (4967) 72-88-87</span>
-					</div>
-				</div>
-			</div>
+			<br><br>
 		</div>
 		<!--! News -->
 		<section class="news">
@@ -298,7 +253,7 @@
 				<div class="row justify-content-between flex-column flex-lg-row align-items-center">
 					<div class="col-lg-4 col-12">
 						<!-- Logo -->
-						<a href="#" class="logo">
+						<a href="index.html" class="logo">
 							<img src="img/logo.png" alt="" class="logo-shape">
 							<div class="logo-text">
 								<span class="title">ООО “НИИИНМ”</span>
