--- a/NIINM/lab.html
+++ b/NIINM/lab.html
@@ -104,7 +104,7 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li><a href="#">Главная</a></li>
+				        	<li><a href="index.html">Главная</a></li>
 				            <li><a href="about.html">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
@@ -121,7 +121,7 @@
 				            <li><a href="asinem.html">Ассоциация</a></li>
 				            <li><a href="nir.html">Последние Разработки</a></li>
 				            <li><a href="services.html">Услуги</a></li>
-				            <li><a href="#">Контакты</a></li>
+				            <li><a href="contacts.html">Контакты</a></li>
 				            <li class="current-page"><a href="lab.html">Лаборатория</a></li>
 				        </ul>
 				    </nav>
@@ -287,7 +287,7 @@
 									<li><a href="about.html">ОБ ИНСТИТУТЕ</a></li>
 									<li><a href="asinem.html">АССОЦИАЦИЯ</a></li>
 									<li><a href="nir.html">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
-									<li><a href="#">КОНТАКТЫ</a></li>
+									<li><a href="contacts.html">КОНТАКТЫ</a></li>
 								</ul>
 							</div>
 							<div class="footer-column">
