--- a/NIINM/services.html
+++ b/NIINM/services.html
@@ -104,7 +104,7 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li><a href="#">Главная</a></li>
+				        	<li><a href="index.html">Главная</a></li>
 				            <li><a href="about.html">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
@@ -121,7 +121,7 @@
 				            <li><a href="asinem.html">Ассоциация</a></li>
 				            <li><a href="nir.html">Последние Разработки</a></li>
 				            <li class="current-page"><a href="services.html">Услуги</a></li>
-				            <li><a href="#">Контакты</a></li>
+				            <li><a href="contacts.html">Контакты</a></li>
 				            <li><a href="lab.html">Лаборатория</a></li>
 				        </ul>
 				    </nav>
