--- a/NIINM/asinem.html
+++ b/NIINM/asinem.html
@@ -109,7 +109,7 @@
 				            <li>
 				            	<a href="#">Материалы</a>
 				            	<ul>
-				                    <li><a href="#">ФИЛЬТРОВАЛЬНЫЕ</a></li>
+				                    <li><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
 				                    <li><a href="#">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
 				                    <li><a href="#">БАРЬЕРНЫЕ</a></li>
 				                    <li><a href="#">ОБУВНЫЕ</a></li>
@@ -258,7 +258,7 @@
 							<div class="footer-column">
 								<h5 class="footer-column__title">МАТЕРИАЛЫ</h5>
 								<ul class="footer-menu__links">
-									<li><a href="#">ФИЛЬТРОВАЛЬНЫЕ</a></li>
+									<li><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
 									<li><a href="#">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
 									<li><a href="#">БАРЬЕРНЫЕ</a></li>
 									<li><a href="#">ОБУВНЫЕ</a></li>
