--- a/NIINM/contacts.html
+++ b/NIINM/contacts.html
@@ -110,7 +110,7 @@
 				            	<a href="#">Материалы</a>
 				            	<ul>
 				                    <li><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
-				                    <li><a href="#">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
+				                    <li><a href="eco.html">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
 				                    <li><a href="#">БАРЬЕРНЫЕ</a></li>
 				                    <li><a href="#">ОБУВНЫЕ</a></li>
 				                    <li><a href="#">САНИТАРНОГО НАЗНАЧЕНИЯ</a></li>
@@ -280,7 +280,7 @@
 								<h5 class="footer-column__title">МАТЕРИАЛЫ</h5>
 								<ul class="footer-menu__links">
 									<li><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
-									<li><a href="#">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
+									<li><a href="eco.html">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
 									<li><a href="#">БАРЬЕРНЫЕ</a></li>
 									<li><a href="#">ОБУВНЫЕ</a></li>
 									<li><a href="#">САНИТАРНО-ГИГИЕНИЧЕСНОГО НАЗНАЧЕНИЯ</a></li>
