--- a/NIINM/barrier.html
+++ b/NIINM/barrier.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>Об институте | ООО “НИИИНМ”</title>
+	<title>ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -104,8 +104,8 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li><a href="index.html">Главная</a></li>
-				            <li class="current-page"><a href="#">Об институте</a></li>
+				        	<li class="current-page"><a href="index.html">Главная</a></li>
+				            <li><a href="about.html">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
 				            	<ul>
@@ -148,104 +148,50 @@
 			</div>
 		</header>
 		<!--! Page-title -->
-		<section class="page-title"><h1>Об институте</h1></section>
+		<section class="page-title"><h1>МАТЕРИАЛЫ БАРЬЕРНЫЕ</h1></section>
 		<!-- Container -->
 		<div class="container">
-			<!--! Card-block -->
-			<div class="card-block right">
-				<img class="card-block__img" src="img/card3.png" alt="Научно-исследовательский институт нетканых материалов">
-				<div class="card-block__content">
-					<strong>В состав ООО "НИИНМ" входит пять основных структурных подразделений, в том числе:</strong>
-					<ul>
-						<li>Лаборатория фильтровальных нетканых материалов;</li>
-						<li>Лаборатория нетканых материалов санитарно-гигиенического назначения;</li>
-						<li>Лаборатория стандартизации, испытаний и сертификации нетканых материалов;</li>
-						<li>Лаборатория полифункциональных нетканых материалов;</li>
-						<li>Научно-экспериментальная лаборатория;</li>
-					</ul>
-				</div>
+			<br><br>
+			<div class="columns-section">
+				<h3>1. ЗАЩИТНОЕ НЕТКАНОЕ ПОЛОТНО «СТЗ-В»</h3>
+				<br>
+				<p>Материал рекомендован к использованию в качестве сорбционного элемента в средствах индивидуальной защиты от угарного газа; препятствует возникновению неприятного запаха. В зависимости от назначения может выпускаться в широком диапазоне поверхностной плотности и толщины.</p>
+				<p><strong>Характеристики полотна:</strong></p>
+				<p>Состав сырья - лубяные, полиэфирные волокна, угленаполненный сорбент.</p>
+				<p>Ширина, см 170</p>
+				<p>Толщина, мм 4,5</p>
+				<p>Поверхностная плотность, г/м2 700</p>
+				<p>Стойкость к истиранию, кол-во циклов, более 45000</p>
+				<p>Дезодорирующий эффект, баллов 4-5 2.</p>
+				<br><br>
+				<h3>2. ПОЛОТНО НЕТКАНОЕ ТЕРМОСТОЙКОЕ</h3>
+				<br>
+				<p>Полотно изготавливается из термостойких волокон и может применятся в производствах, где требуется защита от высоких температур.</p>
+				<p><strong>Характеристики полотна:</strong></p>
+				<p>Состав сырья - термостойкие волокна(Тварон, Арселон, Аримид).</p>
+				<p>Поверхностная плотность, г/м2 200-900</p>
+				<p>Толщина, мм 1,5-10,0</p>
+				<p>Ширина, см 160</p>
+				<br><br>
+				<h3>3. ПОЛОТНО НЕТКАНОЕ ТЕРМОИЗОЛИРУЮЩЕЕ «ПНП»</h3>
+				<br>
+				<p>Материал разработан для термоизоляции палаток специального назначения. Может быть рекомендован к использованию для теплоизолирующих и армирующих целей в различных отраслях промышленности и быта.</p>
+				<p><strong>Характеристики полотна:</strong></p>
+				<p>Состав сырья - полиэфирное и полипропиленовое волокно.</p>
+				<p>Поверхностная плотность, г/м2 350</p>
+				<p>Ширина, см 160</p>
+				<p>Толщина, мм 3,5</p>
+				<p>Воздухопроницаемость, дм3/м2 с 100-300</p>
 			</div>
-			<br>
-			<br>
 			<br>
 			<!-- Quote block -->
-			<hr>
 			<div class="quote-block">
-				<h2>Сотрудники</h2>
+				<p>По вопросам, касающимся барьерных материалов можно связаться с кандидатом технических наук Фокиной Ниной Александровной по телефонам:</p>
+				<p>8 (985) 300-21-37</p>
+				<p>8 (905) 785-79-30</p>
+				<p>8 (4967) 72-88-87</p>
 			</div>
-			<hr>
 			<!-- ./Quote block -->
-			<br>
-			<br>
-			<br>
-			<!--! Card-block -->
-			<div class="card-block">
-				<img class="card-block__img" src="img/employer1.png" alt="Научно-исследовательский институт нетканых материалов">
-				<div class="card-block__content">
-					<h4 class="card-block__title">ШАВКИН ВЛАДИМИР ИВАНОВИЧ</h4>
-					<p>Генеральный директор</p>
-					<p>кандидат экономических наук, старший научный сотрудник, доцент, автор нескольких десятков научных публикаций</p>
-					<p>по всем вопросам работы института можно обращаться непосредственно к генеральному директору по адресу электронной почты:</p>
-				</div>
-			</div>
-			<br>
-			<br>
-			<hr>
-			<!--! Employers -->
-			<div class="employers">
-				<div class="employer">
-					<img src="img/employer2.png" alt="ЕГУПОВА СВЕТЛАНА АНАТОЛЬЕВНА">
-					<h3 class="employer__name">ЕГУПОВА СВЕТЛАНА АНАТОЛЬЕВНА</h3>
-					<p>Заведующий лабораторией фильтровальных нетканых материалов кандидат технических наук, старший научный сотрудник, автор нескольких изобретений и научных публикаций.</p>
-
-					<div class="employer-contact">
-						<span>8 (985) 300-21-37</span>
-						<span>8 (916) 362-80-28-026</span>
-						<span>8 (4967) 72-29-29</span>
-					</div>
-				</div>
-				<div class="employer">
-					<img src="img/employer3.png" alt="МУХАМЕДЖАНОВ ГАБИТ КУЛЬЖАБАЕВИЧ">
-					<h3 class="employer__name">МУХАМЕДЖАНОВ ГАБИТ КУЛЬЖАБАЕВИЧ</h3>
-					<p>Заведующий лабораторией стандартизации, испытаний и сертификации нетканых материалов (испытательной лабораторией) кандидат технических наук, старший научный сотрудник, эксперт, автор нескольких сотен научных публикаций.</p>
-
-					<div class="employer-contact">
-						<span>8 (4967) 35-76-75;</span>
-						<span>8(916) 218-94-04</span>
-					</div>
-				</div>
-				<div class="employer">
-					<img src="img/employer4.png" alt="ФОКИНА НИНА АЛЕКСАНДРОВНА">
-					<h3 class="employer__name">ФОКИНА НИНА АЛЕКСАНДРОВНА</h3>
-					<p>Заведующий лабораторией нетканых материалов санитарно-гигиенического назначения кандидат технических наук, старший научный сотрудник, автор нескольких изобретений и десятков научных публикаций.</p>
-
-					<div class="employer-contact">
-						<span>8 (985) 300-21-37</span>
-						<span>8 (905) 785-79-30;</span>
-						<span>8 (4967) 72-88-8731</span>
-					</div>
-				</div>
-				<div class="employer">
-					<img src="img/employer5.png" alt="БРАТЧЕНЯ ЛЮДМИЛА АЛЕКСЕЕВНА">
-					<h3 class="employer__name">БРАТЧЕНЯ ЛЮДМИЛА АЛЕКСЕЕВНА</h3>
-					<p>Заведующий лабораторией полифункциональных нетканых материалов кандидат технических наук, ведущий научный сотрудник, автор нескольких изобретений и десятков научных публикаций разработчик линии обувных материалов "СТЕЛАН" и "ФИТОЛИН".</p>
-
-					<div class="employer-contact">
-						<span>8(985) 300-21-37</span>
-						<span>8 (916) 850-50-044</span>
-						<span>+7 (4967) 35-27-53</span>
-					</div>
-				</div>
-				<div class="employer">
-					<img src="img/employer6.png" alt="БЫКОНЯ СТАНИСЛАВ СЕРГЕЕВИЧ">
-					<h3 class="employer__name">БЫКОНЯ СТАНИСЛАВ СЕРГЕЕВИЧ</h3>
-					<p>заведующий научно-экспериментальной лабораторией.</p>
-
-					<div class="employer-contact">
-						<span>8 (4967) 72-88-87</span>
-					</div>
-				</div>
-			</div>
 		</div>
 		<!--! News -->
 		<section class="news">
@@ -298,7 +244,7 @@
 				<div class="row justify-content-between flex-column flex-lg-row align-items-center">
 					<div class="col-lg-4 col-12">
 						<!-- Logo -->
-						<a href="#" class="logo">
+						<a href="index.html" class="logo">
 							<img src="img/logo.png" alt="" class="logo-shape">
 							<div class="logo-text">
 								<span class="title">ООО “НИИИНМ”</span>
