--- a/NIINM/contacts.html
+++ b/NIINM/contacts.html
@@ -111,7 +111,7 @@
 				            	<ul>
 				                    <li><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
 				                    <li><a href="eco.html">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
-				                    <li><a href="#">БАРЬЕРНЫЕ</a></li>
+				                    <li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
 				                    <li><a href="#">ОБУВНЫЕ</a></li>
 				                    <li><a href="#">САНИТАРНОГО НАЗНАЧЕНИЯ</a></li>
 				                    <li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
@@ -281,7 +281,7 @@
 								<ul class="footer-menu__links">
 									<li><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
 									<li><a href="eco.html">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
-									<li><a href="#">БАРЬЕРНЫЕ</a></li>
+									<li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
 									<li><a href="#">ОБУВНЫЕ</a></li>
 									<li><a href="#">САНИТАРНО-ГИГИЕНИЧЕСНОГО НАЗНАЧЕНИЯ</a></li>
 									<li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
