--- a/NIINM/footwear.html
+++ b/NIINM/footwear.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>ПОСЛЕДНИЕ РАЗРАБОТКИ | ООО “НИИИНМ”</title>
+	<title>ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -104,7 +104,7 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li><a href="index.html">Главная</a></li>
+				        	<li class="current-page"><a href="index.html">Главная</a></li>
 				            <li><a href="about.html">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
@@ -119,7 +119,7 @@
 				                </ul>
 				        	</li>
 				            <li><a href="asinem.html">Ассоциация</a></li>
-				            <li class="current-page"><a href="nir.html">Последние Разработки</a></li>
+				            <li><a href="nir.html">Последние Разработки</a></li>
 				            <li><a href="services.html">Услуги</a></li>
 				            <li><a href="contacts.html">Контакты</a></li>
 				            <li><a href="lab.html">Лаборатория</a></li>
@@ -148,33 +148,42 @@
 			</div>
 		</header>
 		<!--! Page-title -->
-		<section class="page-title"><h1>ПОСЛЕДНИЕ РАЗРАБОТКИ</h1></section>
+		<section class="page-title"><h1>МАТЕРИАЛЫ ОБУВНЫЕ</h1></section>
 		<!-- Container -->
 		<div class="container">
-			<strong style="text-align: center;">Антимикробное нетканое полотно для улавливания взрывных веществ.</strong>
-			<br>
-			<br>
-			<p>Разработанный антимикробный нетканый материал обладает эффективной адсорбцией частиц взрывчатых веществ. Материал может найти широкое применение в проборах по обнаружению взрывчатых веществ (используются в кинологии и криминалистике). Существуют зоны повышенного контроля, (аэропорты, воздушные суда, наземный и морской транспорт), где возможно обнаружение взрывчатых веществ.</p>
-			<br>
-			<br>
+			<div class="columns-section">
+				<p>Особое место в деятельности ООО "НИИНМ" занимают обувные нетканые материалы. Заслуживает внимания ассортиментная линия "СТЕЛАН" и "ФИТОЛИН", представляющая нетканые полотна сложных оригинальных структур на основе натуральных, химических волокон и природных растительных компонентов. Весь организм человека спроецирован на стопу - это научный факт. Воздействуя на активные точки стопы механически и биологическим излучением, нормализуются жизненные процессы организма. Материалы для внутренних деталей обуви не содержит химических веществ и не оказывает вредного влияния на здоровье человека.Эти материалы комфортны и гигиеничны, легко впитывают пары кожного дыхания, поддерживают ноги и обувь сухими весь день, отдают поглощаемую влагу за время "отдыха", удерживают теплоту тела.</p>
+				<p>Обладают высокими показателями прочности к истиранию, упругости, формоустойчивости и стойкости к образованию заломов. В зависимости от назначения обуви нетканым полотнам придаются свойства: термозащитные и морозостойкие с эффектом "термоса" антимикробные и противогнилостные дезодорирующие биологически активные, нормализующие жизненные процессы Материалам могут придаваться технические характеристики в зависимости от требований Заказчика в следующих диапазонах:</p>
+				<p>С незапамятных времён известны целебные свойства трав с которых помощью решали многие проблемы со здоровьем. Набор витаминов и минералов в лекарственных травах объясняет их полезные свойства. Институтом разработаны биоэнергетические нетканые стелечные материалы, где в качестве структурных элементов использованы сборы лекарственных трав в нативном состоянии измельчённых. Организован серийный выпуск материалов для детской и ортопедической обуви.</p>
+				<p>Структура и состав материалов защищены патентами.</p>
+				<p><strong>Разработка института «Нетканые материалы новых структур с улучшенными гигиеническими свойствами для обуви детей среднего школьного возраста» была удостоена диплома Х Московского международного салона инноваций и инвестиций.</strong></p>
+			</div>
+			<br><br><br>
 			<!--! Card-block -->
 			<div class="card-block right">
-				<img class="card-block__img" src="img/card5.png" alt="Научно-исследовательский институт нетканых материалов">
+				<img class="card-block__img" src="img/card7.png" alt="Научно-исследовательский институт нетканых материалов">
 				<div class="card-block__content">
-					<strong>Характеристики</strong>
-					<ul>
-						<li>Поверхностная плотность, г/м 250±25</li>
-						<li>Ширина ,мм 155</li>
-						<li>Толщина при удельной нагрузке 5 кПа, мм 3±0,3</li>
-						<li>Разрывная нагрузка, Н, не менее -в продольном направлении 80 -поперечном направлении 200</li>
-						<li>Удлинение при разрыве, %, не более -в продольном направлении 160 -поперечном направлении 100</li>
-						<li>Воздухопроницаемость, дм3/м2 с, не менее 250</li>
-						<li>Сорбционная ёмкость, г/г 17</li>
-						<li>Массовая доля антимикробного вещества, % 1,0/1,7</li>
-					</ul>
+					<strong>Характеристики полотна:</strong>
+					<br>
+					<p>Толщина, мм 1,7-10</p>
+					<p>Воздухопроницаемость, дм3/м2/с 40-300</p>
+					<p>Гигроскопичность, % ,не менее 6</p>
+					<p>Влагоотдача, %, не менее 5</p>
+					<p>Коэффициент теплопроводности, Вт/мК 0,035-0,050</p>
+					<p>Устойчивость к истиранию, кол-во циклов 15000-40000</p>
+					<p>Дезодорирующий эффект, баллов 4-5</p>
 				</div>
 			</div>
-			<br><br>
+			<br>
+			<br>
+			<!-- Quote block -->
+			<div class="quote-block">
+				<p>По всем вопросам, можно связаться непосредственно с кандидатом технических наук Братченя Людмилой Алексеевной, по телефонам:</p>
+				<p>8 (985) 300-21-37</p>
+				<p>8 (916) 850-50-04</p>
+				<p>8 (4967) 35-27-53</p>
+			</div>
+			<!-- ./Quote block -->
 		</div>
 		<!--! News -->
 		<section class="news">
@@ -261,7 +270,7 @@
 								<ul class="footer-menu__links">
 									<li><a href="about.html">ОБ ИНСТИТУТЕ</a></li>
 									<li><a href="asinem.html">АССОЦИАЦИЯ</a></li>
-									<li><a href="#">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
+									<li><a href="nir.html">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
 									<li><a href="contacts.html">КОНТАКТЫ</a></li>
 								</ul>
 							</div>
