--- a/NIINM/lab.html
+++ b/NIINM/lab.html
@@ -112,7 +112,7 @@
 				                    <li><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
 				                    <li><a href="eco.html">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
 				                    <li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
-				                    <li><a href="#">ОБУВНЫЕ</a></li>
+				                    <li><a href="footwear.html">ОБУВНЫЕ</a></li>
 				                    <li><a href="#">САНИТАРНОГО НАЗНАЧЕНИЯ</a></li>
 				                    <li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
 				                    <li><a href="#">ДЕКОРАТИВНЫЕ ПАННО</a></li>
@@ -276,7 +276,7 @@
 									<li><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
 									<li><a href="eco.html">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
 									<li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
-									<li><a href="#">ОБУВНЫЕ</a></li>
+									<li><a href="footwear.html">ОБУВНЫЕ</a></li>
 									<li><a href="#">САНИТАРНО-ГИГИЕНИЧЕСНОГО НАЗНАЧЕНИЯ</a></li>
 									<li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
 								</ul>
