--- a/NIINM/barrier.html
+++ b/NIINM/barrier.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>ООО “НИИИНМ”</title>
+	<title>МАТЕРИАЛЫ БАРЬЕРНЫЕ | ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -112,7 +112,7 @@
 				                    <li><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
 				                    <li><a href="eco.html">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
 				                    <li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
-				                    <li><a href="#">ОБУВНЫЕ</a></li>
+				                    <li><a href="footwear.html">ОБУВНЫЕ</a></li>
 				                    <li><a href="#">САНИТАРНОГО НАЗНАЧЕНИЯ</a></li>
 				                    <li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
 				                    <li><a href="#">ДЕКОРАТИВНЫЕ ПАННО</a></li>
@@ -268,7 +268,7 @@
 									<li><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
 									<li><a href="eco.html">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
 									<li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
-									<li><a href="#">ОБУВНЫЕ</a></li>
+									<li><a href="footwear.html">ОБУВНЫЕ</a></li>
 									<li><a href="#">САНИТАРНО-ГИГИЕНИЧЕСНОГО НАЗНАЧЕНИЯ</a></li>
 									<li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
 								</ul>
