--- a/NIINM/lab.html
+++ b/NIINM/lab.html
@@ -115,7 +115,7 @@
 				                    <li><a href="footwear.html">ОБУВНЫЕ</a></li>
 				                    <li><a href="#">САНИТАРНОГО НАЗНАЧЕНИЯ</a></li>
 				                    <li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
-				                    <li><a href="#">ДЕКОРАТИВНЫЕ ПАННО</a></li>
+				                    <li><a href="panno.html">ДЕКОРАТИВНЫЕ ПАННО</a></li>
 				                </ul>
 				        	</li>
 				            <li><a href="asinem.html">Ассоциация</a></li>
@@ -293,7 +293,7 @@
 							<div class="footer-column">
 								<h5 class="footer-column__title">УСЛУГИ</h5>
 								<ul class="footer-menu__links">
-									<li><a href="#">ДЕКОРАТИВНОЕ  ПАННО</a></li>
+									<li><a href="panno.html">ДЕКОРАТИВНОЕ  ПАННО</a></li>
 									<li><a href="lab.html">ИСПЫТАТЕЛЬНАЯ ЛАБОРАТОРИЯ </a></li>
 									<li><a href="services.html">УСЛУГИ</a></li>
 								</ul>
