--- a/NIINM/panno.html
+++ b/NIINM/panno.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>Контакты | ООО “НИИИНМ”</title>
+	<title>ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -104,7 +104,7 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li><a href="index.html">Главная</a></li>
+				        	<li class="current-page"><a href="index.html">Главная</a></li>
 				            <li><a href="about.html">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
@@ -121,7 +121,7 @@
 				            <li><a href="asinem.html">Ассоциация</a></li>
 				            <li><a href="nir.html">Последние Разработки</a></li>
 				            <li><a href="services.html">Услуги</a></li>
-				            <li class="current-page"><a href="contacts.html">Контакты</a></li>
+				            <li><a href="contacts.html">Контакты</a></li>
 				            <li><a href="lab.html">Лаборатория</a></li>
 				        </ul>
 				    </nav>
@@ -148,64 +148,18 @@
 			</div>
 		</header>
 		<!--! Page-title -->
-		<section class="page-title"><h1>КОНТАКТЫ</h1></section>
+		<section class="page-title"><h1>ДЕКОРАТИВНОЕ ПАННО</h1></section>
 		<!-- Container -->
 		<div class="container">
-		<!--! Columns -->
-			<section class="row columns-section justify-content-between">
-				<p>По всем вопросам работы института можно обращаться непосредственно к генеральному директору Шавкину Владимиру Ивановичу, по телефону 8 (916) 684-24-87 и по адресу электронной почты: nri@inbox.ru
-					<br><br>
-				</p>
-				<div class="col-lg-5 col-md-6 col-12">
-					<h4>КАНЦЕЛЯРИЯ:</h4>
-					<br>
-					<p>8 (4967) 35-27-81</p>
-					<p> 8 (4967) 76-52-40</p>
-					<br>
-					<h4>БУХГАЛТЕРИЯ:</h4>
-					<p>8 (4967) 35-27-15</p>
-					<p>Васильева Елена Юрьевна</p>
-					<br>
-					<h4>ЛАБОРАТОРИЯ ФИЛЬТРОВАЛЬНЫХ НЕТКАНЫХ МАТЕРИАЛОВ:</h4>
-					<br>
-					<p>+7 (4967) 72-29-29</p>
-					<p>8 (985) 300-21-37</p>
-					<p>8 (916) 362-80-26 - заведующий лабораторией Егупова Светлана Анатольевна</p>
-					<br>
-				</div>
-				<div class="col-lg-5 col-md-6 col-12">
-					<h4>ЛАБОРАТОРИЯ ПОЛИФУНКЦИОНАЛЬНЫХ НЕТКАНЫХ МАТЕРИАЛОВ С ПОЛИФУНКЦИОНАЛЬНЫМИ СВОЙСТВАМИ:</h4>
-					<br>
-					<p>+7 (4967) 35-27-53</p>
-					<p>+7 (916) 850-50-04 - ведущий научный сотрудник Братченя Людмила Алексеевна</p>
-					<br>
-					<h4>ЛАБОРАТОРИЯ СТАНДАРТИЗАЦИИ, ИСПЫТАНИЙ И СЕРТИФИКАЦИИ НЕТКАНЫХ МАТЕРИАЛОВ:</h4>
-					<br>
-					<p>+7 (4967) 35-76-75 - заведующий лабораторией Мухамеджанов Габит Кульжабаевич</p>
-					<br>
-					<h4>НАУЧНО-ЭКСПЕРЕМЕНТАЛЬНАЯ ЛАБОРАТОРИЯ:</h4>
-					<p>8 (4967) 72-88-87</p>
-					<br>
-					<h4>СПЕЦИАЛИСТ ПО РАБОТЕ С КЛИЕНТАМИ:</h4>
-					<br>
-					<p>8 (985)-300-21-37</p>
-				</div>
-			</section>
-			<br><br>
 			<!--! Card-block -->
 			<div class="card-block right">
-				<div style="position:relative;overflow:hidden; width: 100%;"><a href="https://yandex.ru/maps/10754/serpuhov/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Серпухов</a><a href="https://yandex.ru/maps/10754/serpuhov/house/proletarskaya_ulitsa_82/Z04YdQ5hS0AGQFtufXVwdn9kYg==/?ll=37.391617%2C54.917234&utm_medium=mapframe&utm_source=maps&z=18.69" style="color:#eee;font-size:12px;position:absolute;top:14px;">Пролетарская улица, 82 — Яндекс.Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCQp6VVDgD" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+				<img class="card-block__img" src="img/card8.png" alt="Научно-исследовательский институт нетканых материалов">
 				<div class="card-block__content">
-					<h3>Юридический адрес:</h3>
-					<p>ООО «Научно-исследовательский институт нетканых материалов»,142214, Московская обл., г. Серпухов, ул. Ворошилова, д. 137,офис № 18,этаж № 4.</p>
-					<br>
-					<h3>Фактический адрес:</h3>
-					<p>В 2007 году все производственные мощности и лаборатории института были переведены и находятся в настоящее время по адресу: Московская обл., г. Серпухов, ул. Пролетарская, д. 82.</p>
-					<p>Отгрузка готовой продукции происходит именно по этому адресу.</p>
+					<p>ООО "Научно-исследовательский институт нетканых материалов" в числе мировых новаторов в освоении нового направления в декоративно-прикладном искусстве – нетканых иглопробивных гобеленов.</p>
+					<p>В шестидесятые годы прошлого столетия ныне модное искусство было большой редкостью. Сейчас уже очень многим известны «живописный войлок», «артпротис» и «декорпол». Все это разные названия полученных из цветных волокон, с применением иглопробивной технологии декоративных полотен.</p>
+					<p>Особенностью декоративных полотен, создаваемых в институте, является дополнительная утилитарная функция. За счет применения специальных волокон полотна приобретают способность поглощать из воздуха помещений вредные примеси и неприятные запахи. Поглощающая способность сохраняется в течение пяти лет, после чего требуется стирка или чистка. Таким образом, не утрачивая основного назначения – быть декоративным акцентом интерьера, полотно выполняет функцию сорбента, столь необходимую там, где есть запахи кухни, табачного дыма и т.п.</p>
 				</div>
 			</div>
-			<br>
-			<br>
 		</div>
 		<!--! News -->
 		<section class="news">
